# projetTLF

./: .gitignore  CMakeLists.txt  Makefile  README.txt  test_accept.sh  test_isdet.sh  test_tograph.sh
exemples/: AND3.txt  AND4.txt  AND5.txt  ANDE5.txt  ANDE7.txt
src/: ndet.cpp  parser.tab.cpp  parser.tab.hpp  parser.y
